fix: principal 롤백, 댓글 리스트 버그 해결
- auth 방식 오류 발생하여 principal 로 롤백
- 댓글리스트 stream.toList로 반환했더니 가변리스트라 정렬하지 못하는 문제 발생하여 PostCommentRepositoryImpl 수정